@@ -1,3 +1,8 @@
+2008-04-23  sneumann  <sneumann@ipb-halle.de>
+
+	* R/elements.R: fixed some masses/abundances, 
+	                added more elements
+
 2008-02-15  sneumann  <sneumann@kons.ipb-sub.ipb-halle.de>
 
 	* R/elements.R (initializePSE): Fixed Mass of Na isotope
